# Autonomous_Mobile_Robot

./: README.md
src/ball_detection/: CMakeLists.txt
src/ball_detection/src/: ball_detect.cpp  image_publisher.cpp  line_offset.cpp
src/cheetos_control/: CMakeLists.txt  package.xml
src/cheetos_control/config/: cheetos_control.yaml
src/cheetos_control/launch/: cheetos_control.launch
src/cheetos_description/: CMakeLists.txt  package.xml
src/cheetos_description/launch/: spawn_cheetos.launch
src/cheetos_description/meshes/: CamLow.STL  CamRear.STL  CamRear_Up.STL  CasterJoint.STL  IMU.STL  LeftMotor.STL  LeftSuspension.STL  LeftWheel.STL  Lidar.STL  RearSuspension.STL  Ridar.STL  RightMotor.STL  RightSuspension.STL  RightWheel.STL  Sphere.STL  Trash.STL  body.STL  imu_link.STL
src/cheetos_description/urdf/: cheetos.urdf  cheetos_new.urdf
src/cheetos_key/: CMakeLists.txt  package.xml
src/cheetos_key/cheetos_key/: setup.py
src/cheetos_key/nodes/: cheetos_teleop_key
src/cheetos_teleop/: CMakeLists.txt  package.xml  setup.py
src/cheetos_teleop/nodes/: hardware_test
src/core_msgs/: CMakeLists.txt
src/core_msgs/msg/: robot_position.msg
src/data_integrate/: CMakeLists.txt
src/data_integrate/src/: data_integration.cpp  data_integration.h  data_integration_trial.cpp  data_show.cpp  imu_data.cpp  imu_slopecheck.cpp  line_offset.cpp  robot_position.cpp  (+1 more)
src/line_tracing/: CMakeLists.txt  package.xml
src/line_tracing/src/: line_stop.cpp  line_tracing.cpp  line_tracing_nolower.cpp  line_tracing_onlyrear.cpp
src/view/: CMakeLists.txt  package.xml
(+3 files in other folders)
